@@ -28,12 +28,22 @@ class TestCase::Lib::LongList {
 
     # new with undef
     {
-      my $list = LongList->new(undef);
+      my $list = LongList->new((long[])undef);
       
       unless ($list->length == 0) {
         return 0;
       }
     }
+
+    # new without arguments
+    {
+      my $list = LongList->new;
+      
+      unless ($list->length == 0) {
+        return 0;
+      }
+    }
+    
     
     return 1;
   }
